--- a/src/components/Experience/experience.css
+++ b/src/components/Experience/experience.css
@@ -15,7 +15,7 @@
    content: "";
    width: 3px;
    height: 100%;
-   background: #495670;
+   background: #f9f9f9;
    left: 0;
    top: 0;
    z-index: -1;
