--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@ body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
-  background-color: #0a192f;
+  background-color: #800020; 
 }
 
 code {
@@ -122,7 +122,7 @@ code {
   position: absolute;
   width: 0;
   height: 0.5px;
-  background-color: #64ffda;
+  background-color: #ffffff;
   left: 50%;
   bottom: 0;
   transition: all .3s ease;
@@ -133,7 +133,7 @@ code {
   position: absolute;
   width: 0;
   height: 0.5px;
-  background-color: #64ffda;
+  background-color: #ffffff;
   right: 50%;
   bottom: 0;
   transition: all .3s ease;
@@ -154,18 +154,19 @@ code {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #0a192f; 
+  background: #800020; 
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #bababa; 
+  background: #ffffff; 
   border-radius: 8px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #f8f8f8; 
+  cursor: pointer;
 }
 
 .list {
